[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 216.369, 320.667 )

[node name="WorldBounds" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionPolygon2D" parent="WorldBounds"]
visible = false
position = Vector2( 0, 100 )
polygon = PoolVector2Array( -1.05882, 2.25033, -34.745, 2.89814, -33.4494, 541.23, 1067.18, 536.695, 1067.18, 21.0369, 1025.08, 20.3891, 1025.08, 499.122, 0.236801, 499.77 )

[node name="DanceList" type="Node2D" parent="."]
position = Vector2( 50, 50 )

[connection signal="body_entered" from="WorldBounds" to="." method="_on_WorldBounds_body_entered"]
